Revising Content of Controller Guides
Added new MS Entra ID attribute

Sanity check Controller User Guide for 2.5 release

https://issues.redhat.com/browse/AAP-26370

--- a/downstream/modules/platform/ref-azure-key-vault-lookup.adoc
+++ b/downstream/modules/platform/ref-azure-key-vault-lookup.adoc
@@ -5,9 +5,9 @@
 When you select *{Azure} Key Vault* for *Credential Type*, give the following metadata to configure your lookup:
 
 * *Vault URL (DNS Name)* (required): give the URL used for communicating with {Azure}'s key management system
-* *Client ID* (required): give the identifier as obtained by the {Azure} Active Directory
-* *Client Secret* (required): give the secret as obtained by the {Azure} Active Directory
-* *Tenant ID* (required): give the unique identifier that is associated with an {Azure} Active Directory instance within an Azure subscription
+* *Client ID* (required): give the identifier as obtained by {MSEntraID} 
+* *Client Secret* (required): give the secret as obtained by {MSEntraID}
+* *Tenant ID* (required): give the unique identifier that is associated with an {MSEntraID} instance within an Azure subscription
 * *Cloud Environment*: select the applicable cloud environment to apply
 
 //The following is an example of a configured {Azure} KMS credential.
