Revising content of Controller Guides
Corrections

Sanity check Controller User Guide for 2.5 release

https://issues.redhat.com/browse/AAP-26370

--- a/downstream/modules/platform/ref-controller-host-details.adoc
+++ b/downstream/modules/platform/ref-controller-host-details.adoc
@@ -6,8 +6,10 @@
 
 A system managed by {PlatformNameShort}, which may include a physical, virtual, cloud-based server, or other device. 
 Typically a host is an operating system instance. 
-Hosts are contained in Inventory and are sometimes referred to as a “node”.
+Hosts are grouped in inventories and are sometimes referred to as a “nodes”.
+
 Ansible works against multiple managed nodes or “hosts” in your infrastructure at the same time, using a list or group of lists known as an inventory. 
+
 Once your inventory is defined, you use patterns to select the hosts or groups you want Ansible to run against.
 
 To view the Host details for a job run.
