Revising content of Controller Guides
Corrections and updated an image

Sanity check Controller User Guide for 2.5 release

https://issues.redhat.com/browse/AAP-26370

--- a/downstream/modules/platform/ref-controller-isolation-functionality.adoc
+++ b/downstream/modules/platform/ref-controller-isolation-functionality.adoc
@@ -30,4 +30,4 @@ If your playbooks need to use keys or settings defined in `AWX_ISOLATION_SHOW_PA
 
 The fields described here can be found on the *Jobs settings* page:
 
-image:configure-tower-jobs-isolated-jobs-fields.png[image]
+image::job-settings-full.png[Jobs settings options]
