--- a/downstream/modules/aap-hardening/ref-installing-security-updates-only.adoc
+++ b/downstream/modules/aap-hardening/ref-installing-security-updates-only.adoc
@@ -7,7 +7,7 @@
 
 [role="_abstract"]
 
-For organizations with a policy requiring that all RPMs including security errata be kept up to date, the following playbook might be used in a regularly scheduled job template.
+If your organization has a policy requiring that all RPMs including security errata be kept up to date, you can use the following playbook in a regularly scheduled job template.
 
 -----
 ---
