--- a/downstream/assemblies/aap-hardening/assembly-aap-security-use-cases.adoc
+++ b/downstream/assemblies/aap-hardening/assembly-aap-security-use-cases.adoc
@@ -7,16 +7,10 @@ ifdef::context[:parent-context: {context}]
 
 [role="_abstract"]
 
-////
-Intro not yet completed 23/11
-////
+{PlatformNameShort} provides organizations the opportunity to automate many of the manual tasks required to maintain a strong IT security posture.
+Areas where security operations may be automated include security event response and remediation, routine security operations, compliance with security policies and regulations, and security hardening of IT infrastructure.
 
-////
 include::aap-hardening/con-aap-as-SOC.adoc[leveloffset=+1]
-include::aap-hardening/con-aap-as-defense.adoc[leveloffset=+1]
-include::aap-hardening/con-firewall-policy-management.adoc[leveloffset=+1]
-include::aap-hardening/con-aap-IDPS.adoc[leveloffset=+1]
-////
 include::aap-hardening/con-aap-patch-automation.adoc[leveloffset=+1]
 include::aap-hardening/con-patch-automation.adoc[leveloffset=+2]
 include::aap-hardening/ref-patching-examples.adoc[leveloffset=+2]
