--- a/downstream/modules/aap-hardening/ref-patching-examples.adoc
+++ b/downstream/modules/aap-hardening/ref-patching-examples.adoc
@@ -7,7 +7,9 @@
 
 [role="_abstract"]
 
-The following playbooks are meant to be examples, and should be modified to fit the target environment and tested thoroughly before being used in production.  The examples use the `ansible.builtin.dnf` module for managing packages on RHEL and other operating systems that use the dnf package manager.  Modules for patching other Linux operating systems, Microsoft Windows, and many network devices are also available.
+The following playbooks are provided as patching examples, and should be modified to fit the target environment and tested thoroughly before being used in production.
+These examples use the `ansible.builtin.dnf` module for managing packages on RHEL and other operating systems that use the `dnf` package manager.
+Modules for patching other Linux operating systems, Microsoft Windows, and many network devices are also available.
 
 
 
