Revising Content of Controller Guides
Added assembly and modules for Hosts

Sanity check Controller User Guide for 2.5 release

https://issues.redhat.com/browse/AAP-26370

--- a/downstream/modules/platform/ref-controller-host-details.adoc
+++ b/downstream/modules/platform/ref-controller-host-details.adoc
@@ -12,6 +12,8 @@ Ansible works against multiple managed nodes or “hosts” in your infrastructu
 
 Once your inventory is defined, you use patterns to select the hosts or groups you want Ansible to run against.
 
+== Viewing the host details
+
 To view the Host details for a job run.
 
 .Procedure
@@ -21,6 +23,33 @@ The *Hosts* page displays the following information about the host affected by t
 
 * The *Host*.
 * The *Description*.
+* The *Inventory* associated with that host.
+
+Selecting a particular host displays the *Details* page for that host.
+
+== Creating a host
+
+To create a new host.
+From the navigation panel, select {MenuInfrastructureHosts}.
+Click btn:[Create host].
+On the *Create Host* page enter the following information:
+
+* *Name*: Enter a name for the host.
+* (Optional) *Description*: Enter a description for the host.
+* *Inventory*: Select the inventory to contain that host from the list.
+* *Variables*: Enter the inventory file variables associated with the host.
+
+Click btn:[Create host] to save your changes.
+
+
+.Procedure
+
+From the navigation panel, select {MenuInfrastructureHosts}.
+The *Hosts* page displays the following information about the host affected by the selected event and its associated play and task:
+
+
+
+
 * The type of run in the *Play* field.
 * The type of *Task*.
 * If applicable, the Ansible Module task, and any arguments for that module.
