--- a/downstream/titles/controller/controller-user-guide/master.adoc
+++ b/downstream/titles/controller/controller-user-guide/master.adoc
@@ -45,6 +45,8 @@ include::platform/assembly-controller-topology-viewer.adoc[leveloffset=+1]
 //Infrastructure-Inventories
 include::platform/assembly-controller-inventories.adoc[leveloffset=+1]
 include::platform/assembly-controller-inventory-templates.adoc[leveloffset=+1]
+//Adding short Hosts assembly
+include::platform/assembly-controller-hosts.adoc[leveloffset=+1]
 //Infrastructure-Instance Groups
 include::platform/assembly-ug-controller-instance-groups.adoc[leveloffset=+1]
 include::platform/assembly-ag-instance-and-container-groups.adoc[leveloffset=+1]
