Revising content of Controller Guides
Correction

Sanity check Controller User Guide for 2.5 release

https://issues.redhat.com/browse/AAP-26370

--- a/downstream/assemblies/platform/assembly-controller-hosts.adoc
+++ b/downstream/assemblies/platform/assembly-controller-hosts.adoc
@@ -13,4 +13,4 @@ Ansible works against multiple managed nodes or “hosts” in your infrastructu
 Once your inventory is defined, you use patterns to select the hosts or groups you want Ansible to run against.
 
 include::platform/proc-controller-create-host.adoc[leveloffset=+1]
-include::platform/ assembly-controller-hosts.adoc[leveloffset=+1]
+include::platform/assembly-controller-hosts.adoc[leveloffset=+1]
