aap-26680 Modify AAP docs titles for 2.5 release

--- a/downstream/titles/aap-containerized-install/master.adoc
+++ b/downstream/titles/aap-containerized-install/master.adoc
@@ -6,7 +6,7 @@
 include::attributes/attributes.adoc[]
 
 // Book Title
-= Containerized Ansible Automation Platform installation guide
+= Containerized Installation
 
 include::{Boilerplate}[]
 
