--- a/downstream/titles/security-guide/master.adoc
+++ b/downstream/titles/security-guide/master.adoc
@@ -7,7 +7,7 @@ include::attributes/attributes.adoc[]
 
 
 // Book Title
-= Red Hat Ansible security automation guide
+= Implementing Security Automation
 
 include::{Boilerplate}[]
 
