--- a/downstream/titles/analytics/job-explorer/master.adoc
+++ b/downstream/titles/analytics/job-explorer/master.adoc
@@ -7,7 +7,7 @@ include::attributes/attributes.adoc[]
 :analytics_automation_savings:
 
 [[analytics_automation_savings]]
-= Evaluating your automation controller job runs using the job explorer
+= Using Automation Analytics
 
 include::{Boilerplate}[]
 
