--- a/downstream/titles/operator-mesh/master.adoc
+++ b/downstream/titles/operator-mesh/master.adoc
@@ -9,7 +9,7 @@ include::attributes/attributes.adoc[]
 
 
 // Book Title
-= Red Hat Ansible Automation Platform automation mesh for operator-based installations
+= Automation Mesh for Managed Cloud or Operator Environments
 
 Thank you for your interest in {PlatformName}. {PlatformNameShort} is a commercial offering that helps teams manage complex multi-tier deployments by adding control, knowledge, and delegation to Ansible-powered environments.
 
