--- a/downstream/titles/release-notes/master.adoc
+++ b/downstream/titles/release-notes/master.adoc
@@ -2,7 +2,7 @@
 // For each release, make a copy of assembly-rn-template.adoc, rename and save as instructed in the template and add an include statement to this file.
 include::attributes/attributes.adoc[]
 
-= Red Hat Ansible Automation Platform release notes
+= Release Notes
 
 
 include::{Boilerplate}[]
