AAP-14811 updated following peer review

--- a/downstream/modules/aap-hardening/ref-complex-patching-scenarios.adoc
+++ b/downstream/modules/aap-hardening/ref-complex-patching-scenarios.adoc
@@ -9,7 +9,7 @@
 
 In {PlatformNameShort}, multiple automation jobs can be chained together into workflows, which can be used to coordinate multiple steps in a complex patching scenario. 
 
-In the following example complex patching scenario demonstrates taking virtual machine snapshots, patching the virtual machines, and creating tickets when an error is encountered in the workflow. 
+The following example complex patching scenario demonstrates taking virtual machine snapshots, patching the virtual machines, and creating tickets when an error is encountered in the workflow. 
 
 .Procedure
 
