--- a/downstream/modules/aap-hardening/con-patch-automation.adoc
+++ b/downstream/modules/aap-hardening/con-patch-automation.adoc
@@ -9,8 +9,8 @@
 
 Automating the patching process provides a number of benefits:
 
-* Reduce error-prone manual effort.
-* Decrease time to deploy patches at scale.
+* Reduces error-prone manual effort.
+* Decreases time to deploy patches at scale.
 * Ensures consistency of patches across similar systems.
 Manual patching of similar systems could result in human error (forgetting one or more, patching using different versions) that impacts consistency.
 * Enables orchestration of complex patching scenarios where an update may require taking a system snapshot before applying a patch, or may require additional configuration changes once the patch is applied.
