--- a/downstream/modules/aap-hardening/ref-specifying-package-versions.adoc
+++ b/downstream/modules/aap-hardening/ref-specifying-package-versions.adoc
@@ -9,7 +9,7 @@
 
 For production systems, it is a well-established configuration management practice to deploy only known, tested combinations of software to ensure that systems are configured correctly and perform as expected.
 This includes deploying only known versions of operating system software and patches to ensure that system updates do not introduce problems with production applications.
-The following example playbook installs a specific version of the httpd RPM and its dependencies when the target host uses the RHEL 9 operating system. 
+The following example playbook installs a specific version of the `httpd` RPM and its dependencies when the target host uses the RHEL 9 operating system. 
 
 [NOTE]
 This playbook will not take action if the specified versions are already in place or if a different version of RHEL is installed.
