--- a/downstream/assemblies/aap-hardening/assembly-hardening-aap.adoc
+++ b/downstream/assemblies/aap-hardening/assembly-hardening-aap.adoc
@@ -42,7 +42,7 @@ include::aap-hardening/con-controller-configuration.adoc[leveloffset=+2]
 include::aap-hardening/proc-configure-centralized-logging.adoc[leveloffset=+3]
 include::aap-hardening/proc-configure-external-authentication.adoc[leveloffset=+3]
 include::aap-hardening/con-external-credential-vault.adoc[leveloffset=+3]
-// include::aap-hardening/ref-apply-defensive-security-controls.adoc[leveloffset=+2]
+include::aap-hardening/ref-apply-defensive-security-controls.adoc[leveloffset=+2]
 include::aap-hardening/con-day-two-operations.adoc[leveloffset=+1]
 include::aap-hardening/con-rbac.adoc[leveloffset=+2]
 include::aap-hardening/ref-updates-upgrades.adoc[leveloffset=+2]
