Revising content of Controller Guides
Corrected Hosts section

Sanity check Controller User Guide for 2.5 release

https://issues.redhat.com/browse/AAP-26370

--- a/downstream/modules/platform/proc-controller-view-host.adoc
+++ b/downstream/modules/platform/proc-controller-view-host.adoc
@@ -18,11 +18,12 @@ The *Hosts* page displays the following information about the host or hosts affe
 * *Variables* associated with the Host. You can display the variables in YAML or JSON format.
 
 . Click btn:[Edit host] to edit details of the host.
-. Select the *Facts* tab to display facts associated with the host.
-. Select the *Groups* tab to display the Groups associated with the host.
-. Click btn:[Associate groups] to associate a group with the host.
-. Select the *Jobs* tab to display the Jobs which ran on the host.
-. Click the image:arrow.png[Expand,15,15] icon to display details of the job.
+
+* Select the *Facts* tab to display facts associated with the host.
+* Select the *Groups* tab to display the Groups associated with the host.
+** Click btn:[Associate groups] to associate a group with the host.
+* Select the *Jobs* tab to display the Jobs which ran on the host.
+** Click the image:arrow.png[Expand,15,15] icon to display details of the job.
 +
 image::hosts_jobs_details.png[Details of job associated with a host]
 
