Revising content of Controller Guides
Corrections

Sanity check Controller User Guide for 2.5 release

https://issues.redhat.com/browse/AAP-26370

--- a/downstream/assemblies/platform/assembly-controller-user-interface.adoc
+++ b/downstream/assemblies/platform/assembly-controller-user-interface.adoc
@@ -10,7 +10,7 @@ The {MenuTopAE} _User Interface_ (UI) provides a graphical framework for your IT
 
 Access your user profile, the *About* page, view related documentation, or log out using the icons in the page header. 
 
-The navigation panel provides quick access to {ControllerName} resources, such as *Jobs*, *Templates*, *Schedules*, *Projects*, *Infrastructure* and *Administration*.
+The navigation panel provides quick access to {ControllerName} resources, such as *Jobs*, *Templates*, *Schedules*, *Projects*, *Infrastructure*, and *Administration*.
 
 
 * xref:controller-jobs[Jobs]
