--- a/downstream/modules/platform/proc-controller-create-host.adoc
+++ b/downstream/modules/platform/proc-controller-create-host.adoc
@@ -4,13 +4,14 @@
 
 To create a new host.
 
-From the navigation panel, select {MenuInfrastructureHosts}.
-Click btn:[Create host].
-On the *Create Host* page enter the following information:
+.Procedure
+. From the navigation panel, select {MenuInfrastructureHosts}.
+. Click btn:[Create host].
+. On the *Create Host* page enter the following information:
 
 * *Name*: Enter a name for your host.
 * (Optional) *Description*: Enter a description for your host.
 * *Inventory*: Select the inventory from the list to contain your host.
 * *Variables*: Enter the inventory file variables associated with your host.
 
-Click btn:[Create host] to save your changes.
+. Click btn:[Create host] to save your changes.
