Revising content of Controller Guides (#1500)
* Revising content of Controller Guides

Removing content covered elsewhere and rearranging content to match UI

Sanity check Controller User Guide for 2.5 release

https://issues.redhat.com/browse/AAP-26370

* Revising content of Controller User Guide

Cleared xrefs

Sanity check Controller User Guide for 2.5 release

https://issues.redhat.com/browse/AAP-26370

* Revising content of Controller Guides

Added comments

Sanity check Controller User Guide for 2.5 release

https://issues.redhat.com/browse/AAP-26370

* Revising content of Controller Guides

Further changes

Sanity check Controller User Guide for 2.5 release

https://issues.redhat.com/browse/AAP-26370

* Revising content of controller guides

Correction

Sanity check Controller User Guide for 2.5 release

https://issues.redhat.com/browse/AAP-26370

* Revising content of Controller Guides

Further corrections

Sanity check Controller User Guide for 2.5 release

https://issues.redhat.com/browse/AAP-26370

* Revising content of Controller Guides

Change from dev information

Sanity check Controller User Guide for 2.5 release

https://issues.redhat.com/browse/AAP-26370

* Revising content of Controller Guides

Additional chages, security chapter partitioned

Sanity check Controller User Guide for 2.5 release

https://issues.redhat.com/browse/AAP-26370

* Revising content of Controller Guides

Corrections and removed 'the' from Link attribution

Sanity check Controller User Guide for 2.5 release

https://issues.redhat.com/browse/AAP-26370

* Revising content of Controller Guides

Corrections

Sanity check Controller User Guide for 2.5 release

https://issues.redhat.com/browse/AAP-26370

* Revising content of Controller Guides

Moved more content

Sanity check Controller User Guide for 2.5 release

https://issues.redhat.com/browse/AAP-26370

* Revising content of Controller Guides

Correction

Sanity check Controller User Guide for 2.5 release

https://issues.redhat

--- a/downstream/modules/platform/con-controller-administration.adoc
+++ b/downstream/modules/platform/con-controller-administration.adoc
@@ -5,16 +5,11 @@
 The *Administration* menu provides access to the administrative options of {ControllerName}. 
 From here, you can create, view, and edit:
 
-* xref:assembly-controller-custom-credentials[Credential types]
+//activity stream is an unconnected procedure. It needs a home.
+* TBD[Activity Stream]
+* xref:controller-approval-nodes[Workflow Approvals]
 * xref:controller-notifications[Notifications]
-* Management_jobs
-* xref:controller-instance-groups[Instance groups]
-* Instances
-* xref:assembly-controller-applications[Applications]
-* xref:assembly-controller-execution-environments[Execution environments]
-//Topology View is in the Admin Guide
-* Topology view
-//Next version includes
-//* Instance Groups
-//* Instances
-//* Execution Environments
+* link:{BaseURL}/documentation/red_hat_ansible_automation_platform/{PlatformVers}/html/automation_controller_administration_guide/assembly-controller-management-jobs[Management Jobs]
+
+
+
