--- a/downstream/modules/platform/con-controller-settings.adoc
+++ b/downstream/modules/platform/con-controller-settings.adoc
@@ -2,15 +2,12 @@
 
 = The Settings menu
 
-Configure global and system-level settings using the *Settings* menu. 
-The *Settings* menu provides access to {ControllerName} configuration settings.
+You can configure some {ControllerName} options using the *Settings* menu of the User Interface. 		
 
-The *Settings* page enables administrators to configure the following:
 
-* Authentication
-* Jobs
-* System-level attributes
-* Customize the UI
-* Product license information
+The *Settings* page enables an administrator to configure the following:
 
-//include::settings-menu.adoc[]
+* link:{BaseURL}/documentation/red_hat_ansible_automation_platform/{PlatfromVers}/html/automation_controller_administration_guide/assembly-ag-controller-config#proc-controller-configure-subscriptions[Subscriptions] TBD
+* link:{BaseURL}/documentation/red_hat_ansible_automation_platform/{PlatformVers}/html/automation_controller_administration_guide/assembly-ag-controller-config#controller-configure-system[System] TBD
+* link:{BaseURL}/documentation/red_hat_ansible_automation_platform/{PlatformVers}/html/automation_controller_administration_guide/assembly-ag-controller-config#controller-configure-jobs[Jobs]TBD
+* link:{BaseURL}/documentation/red_hat_ansible_automation_platform/{PlatformVers}/html/automation_controller_administration_guide/assembly-ag-controller-config#proc-controller-configure-analytics[{Analytics}] TBD
