--- a/downstream/modules/platform/con-controller-overview-details.adoc
+++ b/downstream/modules/platform/con-controller-overview-details.adoc
@@ -24,7 +24,7 @@ If you want to give any user or team permissions to use a job template, you can 
 An auditor is useful for a service account that scrapes automation information from the REST API.
 
 .Additional resources
-* For more information about user roles, see xref:con-controller-rbac[Role-Based Access Controls].
+* For more information about user roles, see TBD[Role-Based Access Controls].
 
 = Cloud and autoscaling flexibility
 {ControllerNameStart} includes a powerful optional provisioning callback feature that enables nodes to request configuration on-demand.
@@ -48,7 +48,7 @@ For more information, see xref:ref-projects-galaxy-support[Ansible Galaxy Suppor
 = Inventory support for OpenStack
 Dynamic inventory support is available for OpenStack. With this you can target any of the virtual machines or images running in your OpenStack cloud.
 
-For more information, see the xref:ref-controller-credential-openstack[OpenStack credential type] section.
+For more information, see TBD[OpenStack credential type].
 
 = Remote command execution
 Use remote command execution to perform a simple tasks, such as adding a single user, updating a single security vulnerability, or restarting a failing service.
