--- a/downstream/modules/platform/proc-controller-create-job-template.adoc
+++ b/downstream/modules/platform/proc-controller-create-job-template.adoc
@@ -5,13 +5,15 @@
 .Procedure
 
 . From the navigation panel, select {MenuAETemplates}.
-. On the *Templates* list view, select *Create job template* from the *Create template* list.
+. On the *Templates* page, select *Create job template* from the *Create template* list.
 . Enter the appropriate details in the following fields:
 +
 [NOTE]
 ====
 If a field has the *Prompt on launch* checkbox selected, launching the job prompts you for the value for that field when launching.
+
 Most prompted values override any values set in the job template.
+
 Exceptions are noted in the following table.
 ====
 +
@@ -34,7 +36,7 @@ A System Administrator must grant you or your team permissions to be able to use
 
 Inventory prompts show up as its own step in a later prompt window.
 | Project | Select the project to use with this job template from the projects available to the user that is logged in. | N/A
-| SCM branch | This field is only present if you chose a project that allows branch override.
+| Source control branch | This field is only present if you chose a project that allows branch override.
 Specify the overriding branch to use in your job run.
 If left blank, the specified SCM branch (or commit hash or tag) from the project is used.
 
@@ -79,15 +81,6 @@ When a label is removed, it is no longer associated with that particular Job or 
 - Jobs inherit labels from the Job Template at the time of launch.
 If you delete a label from a Job Template, it is also deleted from the Job. a| - If selected, even if a default value is supplied, you are prompted when launching to supply additional labels, if needed.
 - You cannot delete existing labels, selecting image:disassociate.png[Disassociate,10,10] only removes the newly added labels, not existing default labels.
-| Variables a| - Pass extra command line variables to the playbook.
-This is the "-e" or "-extra-vars" command line parameter for ansible-playbook that is documented in the Ansible documentation at link:https://docs.ansible.com/ansible/latest/playbook_guide/playbooks_variables.html#defining-variables-at-runtime[Defining variables at runtime].
-- Provide key or value pairs by using either YAML or JSON.
-These variables have a maximum value of precedence and overrides other variables specified elsewhere.
-The following is an example value:
-`git_branch: production
-release_version: 1.5` | Yes.
-
-If you want to be able to specify `extra_vars` on a schedule, you must select *Prompt on launch* for Variables on the job template, or enable a survey on the job template. Those answered survey questions become `extra_vars`.
 | Forks | The number of parallel or simultaneous processes to use while executing the playbook.
 A value of zero uses the Ansible default setting, which is five parallel processes unless overridden in `/etc/ansible/ansible.cfg`. | Yes
 | Limit a| A host pattern to further constrain the list of hosts managed or affected by the playbook. You can separate many patterns by colons (:).
@@ -133,9 +126,18 @@ If selected, you are providing the jobs preferred instance groups in order of pr
 For more information and examples see link:https://docs.ansible.com/ansible/latest/playbook_guide/playbooks_tags.html[Tags] in the Ansible documentation. | Yes
 | Skip Tags | Type and select the *Create* menu to specify certain tasks or parts of the playbook to skip.
 For more information and examples see link:https://docs.ansible.com/ansible/latest/playbook_guide/playbooks_tags.html[Tags] in the Ansible documentation. | Yes
+| Extra Variables a| - Pass extra command line variables to the playbook.
+This is the "-e" or "-extra-vars" command line parameter for ansible-playbook that is documented in the Ansible documentation at link:https://docs.ansible.com/ansible/latest/playbook_guide/playbooks_variables.html#defining-variables-at-runtime[Defining variables at runtime].
+- Provide key or value pairs by using either YAML or JSON.
+These variables have a maximum value of precedence and overrides other variables specified elsewhere.
+The following is an example value:
+`git_branch: production
+release_version: 1.5` | Yes.
+
+If you want to be able to specify `extra_vars` on a schedule, you must select *Prompt on launch* for Variables on the job template, or enable a survey on the job template. Those answered survey questions become `extra_vars`.
 |===
 +
-. Specify the following options for launching this template, if necessary:
+. You can set the following options for launching this template, if necessary:
 * *Privilege escalation*: If checked, you enable this playbook to run as an administrator.
 This is the equal of passing the `--become` option to the `ansible-playbook` command.
 * *Provisioning callback*: If checked, you enable a host to call back to {ControllerName} through the REST API and start a job from this job template.
@@ -151,8 +153,10 @@ GitHub and GitLab are the supported SCM systems.
 ** *Webhook key*: Generated shared secret to be used by the webhook service to sign payloads sent to {ControllerName}.
 You must configure this in the settings on the webhook service in order for {ControllerName} to accept webhooks from this service.
 ** *Webhook credential*: Optionally, give a GitHub or GitLab personal access token (PAT) as a credential to use to send status updates back to the webhook service.
++
 Before you can select it, the credential must exist.
-See xref:ref-controller-credential-types[Credential Types] to create one.
++
+See TBD[Credential Types] to create one.
 ** For additional information about setting up webhooks, see xref:controller-work-with-webhooks[Working with Webhooks].
 * *Concurrent jobs*: If checked, you are allowing jobs in the queue to run simultaneously if not dependent on one another. Check this box if you want to run job slices simultaneously. For more information, see xref:controller-capacity-determination[{ControllerNameStart} capacity determination and job impact].
 * *Enable fact storage*: If checked, {ControllerName} stores gathered facts for all hosts in an inventory related to the job running.
@@ -170,4 +174,4 @@ You must first save the template before launching, otherwise, btn:[Launch templa
 .Verification
 
 . From the navigation panel, select {MenuAETemplates}.
-. Verify that the newly created template appears on the *Templates* list view.
+. Verify that the newly created template appears on the *Templates* page.
