--- a/downstream/titles/controller/controller-user-guide/master.adoc
+++ b/downstream/titles/controller/controller-user-guide/master.adoc
@@ -14,7 +14,7 @@ include::attributes/attributes.adoc[]
 Thank you for your interest in {PlatformName} {ControllerName}.
 {ControllerNameStart} helps teams manage complex multitiered deployments by adding control, knowledge, and delegation to Ansible-powered environments.
 
-The {ControllerNameStart} User Guide describes all of the functionality available in {ControllerName}.
+Using {ControllerName} describes all of the functionality available in {ControllerName}.
 It assumes moderate familiarity with Ansible, including concepts such as playbooks, variables, and tags.
 For more information about these and other Ansible concepts, see the link:https://docs.ansible.com/[Ansible documentation].
 
@@ -24,33 +24,52 @@ include::platform/assembly-UG-overview.adoc[leveloffset=+1]
 include::platform/assembly-controller-licensing.adoc[leveloffset=+1]
 include::platform/assembly-controller-login.adoc[leveloffset=+1]
 include::platform/assembly-controller-managing-subscriptions.adoc[leveloffset=+1]
+//Rewritten for 2.5
 include::platform/assembly-controller-user-interface.adoc[leveloffset=+1]
 include::platform/assembly-controller-search.adoc[leveloffset=+1]
-include::platform/assembly-controller-organizations.adoc[leveloffset=+1]
-include::platform/assembly-controller-users.adoc[leveloffset=+1]
-include::platform/assembly-controller-teams.adoc[leveloffset=+1]
-include::platform/assembly-controller-credentials.adoc[leveloffset=+1]
-//In the new UI, Credential types is part of Credentials.
-include::platform/assembly-controller-custom-credentials.adoc[leveloffset=+1]
-include::platform/assembly-controller-secret-management.adoc[leveloffset=+1]
-include::platform/assembly-controller-applications.adoc[leveloffset=+1]
-include::platform/assembly-controller-execution-environments.adoc[leveloffset=+1]
-include::platform/assembly-controller-ee-setup-reference.adoc[leveloffset=+1]
-include::platform/assembly-controller-projects.adoc[leveloffset=+1]
-include::platform/assembly-controller-project-signing.adoc[leveloffset=+1]
-include::platform/assembly-controller-inventories.adoc[leveloffset=+1]
-include::platform/assembly-controller-inventory-templates.adoc[leveloffset=+1]
+//Jobs
+include::platform/assembly-ug-controller-jobs.adoc[leveloffset=+1]
+//Templates
 include::platform/assembly-ug-controller-job-templates.adoc[leveloffset=+1]
 include::platform/assembly-ug-controller-job-slicing.adoc[leveloffset=+1]
-include::platform/assembly-ug-controller-workflows.adoc[leveloffset=+1]
+//This includes workflow  approvals.
 include::platform/assembly-ug-controller-workflow-job-templates.adoc[leveloffset=+1]
+include::platform/assembly-ug-controller-workflows.adoc[leveloffset=+1]
+//Schedules
+include::platform/assembly-ug-controller-schedules.adoc[leveloffset=+1]
+//Projects
+include::platform/assembly-controller-projects.adoc[leveloffset=+1]
+include::platform/assembly-controller-project-signing.adoc[leveloffset=+1]
+//Infrastructure-Topology View
+include::platform/assembly-controller-topology-viewer.adoc[leveloffset=+1]
+//Infrastructure-Inventories
+include::platform/assembly-controller-inventories.adoc[leveloffset=+1]
+include::platform/assembly-controller-inventory-templates.adoc[leveloffset=+1]
+//Adding short Hosts assembly
+include::platform/assembly-controller-hosts.adoc[leveloffset=+1]
+//Infrastructure-Instance Groups
 include::platform/assembly-ug-controller-instance-groups.adoc[leveloffset=+1]
-include::platform/assembly-ug-controller-jobs.adoc[leveloffset=+1]
+include::platform/assembly-ag-instance-and-container-groups.adoc[leveloffset=+1]
+//Infrastructure-Instances
+include::platform/assembly-controller-instances.adoc[leveloffset=+1]
+//Infrastructure-Execution environments
+include::platform/assembly-controller-execution-environments.adoc[leveloffset=+1]
+include::platform/assembly-controller-ee-setup-reference.adoc[leveloffset=+1]
+//Moved to Donna's Access management document
+//include::platform/assembly-controller-organizations.adoc[leveloffset=+1]
+//include::platform/assembly-controller-users.adoc[leveloffset=+1]
+//include::platform/assembly-controller-teams.adoc[leveloffset=+1]
+//Possibly in Donna's credentials document
+//include::platform/assembly-controller-credentials.adoc[leveloffset=+1]
+//include::platform/assembly-controller-custom-credentials.adoc[leveloffset=+1]
+//Moved to admin guide
+//include::platform/assembly-controller-secret-management.adoc[leveloffset=+1]
+//include::platform/assembly-controller-applications.adoc[leveloffset=+1]
 include::platform/assembly-ug-controller-work-with-webhooks.adoc[leveloffset=+1]
 include::platform/assembly-ug-controller-notifications.adoc[leveloffset=+1]
 include::platform/assembly-ug-controller-attributes-custom-notifications.adoc[leveloffset=+1]
-include::platform/assembly-ug-controller-schedules.adoc[leveloffset=+1]
 include::platform/assembly-ug-controller-setting-up-insights.adoc[leveloffset=+1]
 include::platform/assembly-controller-best-practices.adoc[leveloffset=+1]
-include::platform/assembly-controller-security.adoc[leveloffset=+1]
+//RBAC contents to Donna's document, Jobs info to Jobs.
+//include::platform/assembly-controller-security.adoc[leveloffset=+1]
 include::platform/assembly-controller-glossary.adoc[leveloffset=+1]
