--- a/downstream/modules/platform/con-eda-2-5-with-controller-2-4.adoc
+++ b/downstream/modules/platform/con-eda-2-5-with-controller-2-4.adoc
@@ -11,8 +11,10 @@ Use the following example to populate the inventory file to deploy a new single 
 
 ----
 [automationedacontroller]
+eda.example.org
 
 [automationgateway]
+eda.example.org
 
 [database]
 data.example.com
