--- a/downstream/modules/platform/con-eda-2-5-with-controller-2-4.adoc
+++ b/downstream/modules/platform/con-eda-2-5-with-controller-2-4.adoc
@@ -6,7 +6,7 @@
 [id="eda-2-5-with-controller-2-4_{context}"]
 = {EDAName} 2.5 with controller 2.4
 
-Use the following example to populate the inventory file to deploy a new single instance of {EDAName} 2.5 with controller 2.4. For {EDAName}, the requirements for a connection to controller are the `automation_controller_main_url` pointing to the 2.4 controller URL and `username/password`.
+Use the following example to populate the inventory file to deploy a new single instance of {EDAName} 2.5 with controller 2.4. For {EDAName}, the requirements for a connection to controller are the `automation_controller_main_url` pointing to the 2.4 controller URL.
 
 
 ----
