updates to config chapter and new title for deploy guide

--- a/downstream/assemblies/platform/assembly-configure-aap-operator.adoc
+++ b/downstream/assemblies/platform/assembly-configure-aap-operator.adoc
@@ -13,7 +13,7 @@ The platform gateway for {PlaformNameShort} enables you to manage the following 
 * {EDAName}
 * {LightspeedShortName} (This feature is disabled by default, you must opt in to use it.)
 
-Before you can deploy the platform gateway you need to have {OperatorPlatform} installed in a namespace. 
+Before you can deploy the platform gateway you must have {OperatorPlatform} installed in a namespace. 
 If you have not installed {OperatorPlatform} see <<Installing the Red Hat Ansible Automation Platform operator on Red Hat OpenShift Container Platform>>.
 
 If you have the {OperatorPlatform} and some or all of the {PlatformNameShort} components installed see <<Deploying the platform gateway with existing {PlatformNameShort} components>> for how to proceed. 
