--- a/downstream/modules/platform/proc-operator-deploy-central-config.adoc
+++ b/downstream/modules/platform/proc-operator-deploy-central-config.adoc
@@ -46,7 +46,7 @@ apiVersion: aap.ansible.com/v1alpha1
       lightspeed:
         disabled: true
 ----
-.. For new components, if you do not specify a name, a default name generates.
+.. For new components, if you do not specify a name, a default name is generated.
 . Click btn:[Create].
 . To access your new instance, see <<Accessing the platform gateway>>.
 
