Added open source licence to Playbooks doc
Add open-source license to Getting started with playbooks

https://issues.redhat.com/browse/AAP-26693

--- a/downstream/aap-common/gplv3-license-text.adoc
+++ b/downstream/aap-common/gplv3-license-text.adoc
@@ -1,7 +1,7 @@
 [id="gplv3-license-text"]
 
 [.text-center]
-GNU GENERAL PUBLIC LICENSE
+*GNU GENERAL PUBLIC LICENSE*
 [.text-center]
 Version 3, 29 June 2007
 
