--- a/downstream/modules/playbooks/ref-playbook-execution.adoc
+++ b/downstream/modules/playbooks/ref-playbook-execution.adoc
@@ -11,7 +11,7 @@ At a minimum, each play defines two things:
 * the managed nodes to target, using a pattern
 * at least one task to execute
 
-[Note]
+[NOTE]
 ====
 In Ansible 2.10 and later, use the fully-qualified collection name in your playbooks to ensure the correct module is selected, because multiple collections can contain modules with the same name (for example, `user`). 
 ====
