--- a/downstream/assemblies/platform/assembly-configure-aap-operator.adoc
+++ b/downstream/assemblies/platform/assembly-configure-aap-operator.adoc
@@ -4,7 +4,7 @@ ifdef::context[:parent-context: {context}]
 
 :context: configure-aap-operator
 
-= Configuring the {OperatorPlatform} on {OCP}
+= Configuring the Red Hat {OperatorPlatform} on {OCP}
 
 The platform gateway for {PlaformNameShort} enables you to manage the following {PlatformNameShort} components to form a single user interface:
 
@@ -13,7 +13,7 @@ The platform gateway for {PlaformNameShort} enables you to manage the following 
 * {EDAName}
 * {LightspeedShortName} (This feature is disabled by default, you must opt in to use it.)
 
-Before you can deploy the platform gateway you need to have {OperatorPlatform} installed in a namespace. 
+Before you can deploy the platform gateway you must have {OperatorPlatform} installed in a namespace. 
 If you have not installed {OperatorPlatform} see <<Installing the Red Hat Ansible Automation Platform operator on Red Hat OpenShift Container Platform>>.
 
 If you have the {OperatorPlatform} and some or all of the {PlatformNameShort} components installed see <<Deploying the platform gateway with existing {PlatformNameShort} components>> for how to proceed. 
@@ -21,7 +21,7 @@ If you have the {OperatorPlatform} and some or all of the {PlatformNameShort} co
 include::platform/proc-operator-link-components.adoc[leveloffset=+1]
 include::platform/proc-operator-access-aap.adoc[leveloffset=+1]
 include::platform/proc-operator-deploy-central-config.adoc[leveloffset=+1]
-include::platform/proc-operator-aap-troubleshooting.adoc[leveloffset=+1]
+include::platform/proc-operator-aap-faq.adoc[leveloffset=+1]
 
 ifdef::parent-context[:context: {parent-context}]
 ifndef::parent-context[:!context:]
