--- a/downstream/aap-common/apache-2.0-license.adoc
+++ b/downstream/aap-common/apache-2.0-license.adoc
@@ -1,7 +1,7 @@
 [id="apache-2.0-license"]
 
 [.text-center]
-Apache License
+*Apache License*
 [.text-center]
 Version 2.0, January 2004
 [.text-center]
