Pre-release updates for async release notes
Update the async release notes for the 2.5-ea release:
- Archive 2.4 async related files
- Update directory structure for async release note files
- Comment out asynchronous releases section for EA until an async release is released
- Scrub release versions

Applies to asynchronous release notes section only.

Pre-release fixes for async release notes

https://issues.redhat.com/browse/AAP-26849

--- a/downstream/titles/release-notes/async/installer-version-table.adoc
+++ b/downstream/titles/release-notes/async/installer-version-table.adoc
@@ -6,12 +6,12 @@
 |===
 | Installation bundle | Component versions
 
-| xref:installer-24-7[2.4-7] + 
-June 12, 2024  | 
-* `ansible-automation-platform-setup` 2.4-7
-* `ansible-core` 2.15.11
-* {ControllerNameStart} 4.5.7
-* {HubNameStart} 4.9.2
-* {EDAName} 1.0.7
+| Advisory link + 
+Month Date, 2024  | 
+* `ansible-automation-platform-setup`
+* `ansible-core` 
+* {ControllerNameStart}
+* {HubNameStart}
+* {EDAName}
 
 |===
