--- a/downstream/titles/release-notes/async/async-updates.adoc
+++ b/downstream/titles/release-notes/async/async-updates.adoc
@@ -10,9 +10,19 @@ As a Red Hat Customer Portal user, you can enable errata notifications in the ac
 Red Hat Customer Portal user accounts must have systems registered and consuming {PlatformNameShort} entitlements for {PlatformNameShort} errata notification emails to generate.
 ====
 
-The Asynchronous updates section of the release notes will be updated over time to give notes on enhancements and bug fixes for asynchronous errata releases of {PlatformNameShort} 2.4.
+The Asynchronous updates section of the release notes will be updated over time to give notes on enhancements and bug fixes for asynchronous errata releases of {PlatformNameShort} {PlatformVers}.
 
 [role="_additional-resources"]
 .Additional resources
 * For more information about asynchronous errata support in {PlatformNameShort}, see link:https://access.redhat.com/support/policy/updates/ansible-automation-platform[{PlatformName} Life Cycle].
 * For information about Common Vulnerabilities and Exposures (CVEs), see link:https://www.redhat.com/en/topics/security/what-is-cve[What is a CVE?] and link:https://access.redhat.com/security/security-updates/cve[Red Hat CVE Database].
+
+== RPM releases
+
+//Component version table for RPM releases
+include::../async/rpm-version-table.adoc[leveloffset=+3]
+
+== Installer releases
+
+//Component version table for installer releases
+include::../async/installer-version-table.adoc[leveloffset=+3]
