--- a/downstream/titles/release-notes/master.adoc
+++ b/downstream/titles/release-notes/master.adoc
@@ -21,49 +21,5 @@ include::topics/operator-240.adoc[leveloffset=+1]
 
 include::topics/docs-24.adoc[leveloffset=+1]
 
-// == Asynchronous updates
-include::topics/async-updates.adoc[leveloffset=+1]
-
-=== RPM releases
-
-include::topics/rpm-version-table.adoc[leveloffset=+3]
-
-include::topics/rpm-24-7.adoc[leveloffset=+3]
-
-include::topics/rpm-24-6.adoc[leveloffset=+3]
-
-include::topics/rpm-24-5.adoc[leveloffset=+3]
-
-include::topics/rpm-24-4.adoc[leveloffset=+3]
-
-include::topics/rpm-24-3.adoc[leveloffset=+3]
-
-include::topics/rpm-24-2.adoc[leveloffset=+3]
-
-=== Installer releases
-
-include::topics/installer-version-table.adoc[leveloffset=+3]
-
-include::topics/installer-24-7.adoc[leveloffset=+3]
-
-include::topics/installer-24-62.adoc[leveloffset=+3]
-
-include::topics/installer-24-61.adoc[leveloffset=+3]
-
-include::topics/installer-24-6.adoc[leveloffset=+3]
-
-include::topics/installer-24-24.adoc[leveloffset=+3]
-
-include::topics/installer-24-23.adoc[leveloffset=+3]
-
-include::topics/installer-24-22.adoc[leveloffset=+3]
-
-include::topics/installer-24-21.adoc[leveloffset=+3]
-
-include::topics/installer-24-14.adoc[leveloffset=+3]
-
-include::topics/installer-24-13.adoc[leveloffset=+3]
-
-include::topics/installer-24-12.adoc[leveloffset=+3]
-
-include::topics/installer-24-11.adoc[leveloffset=+3]
+// Asynchronous release notes - commented out until 2.5 has asynchronous release note updates
+// include::async/async-updates.adoc[leveloffset=+1]
