--- a/downstream/aap-common/gplv3-license-text.adoc
+++ b/downstream/aap-common/gplv3-license-text.adoc
@@ -7,7 +7,7 @@ Version 3, 29 June 2007
 
 Copyright © 2007 Free Software Foundation, Inc.<<https://fsf.org/>>
 
-Everyone is permitted to copy and distribute ve>rbatim copies of this license document, but changing it is not allowed.
+Everyone is permitted to copy and distribute verbatim copies of this license document, but changing it is not allowed.
 
 [discrete]
 ==== Preamble
