Added open source licence to Playbooks doc (#1546)
* Added open source licence to Playbooks doc
https://issues.redhat.com/browse/AAP-26693

--- a/downstream/aap-common/gplv3-license-text.adoc
+++ b/downstream/aap-common/gplv3-license-text.adoc
@@ -1,13 +1,13 @@
 [id="gplv3-license-text"]
 
 [.text-center]
-GNU GENERAL PUBLIC LICENSE
+*GNU GENERAL PUBLIC LICENSE*
 [.text-center]
 Version 3, 29 June 2007
 
 Copyright © 2007 Free Software Foundation, Inc.<<https://fsf.org/>>
 
-Everyone is permitted to copy and distribute ve>rbatim copies of this license document, but changing it is not allowed.
+Everyone is permitted to copy and distribute verbatim copies of this license document, but changing it is not allowed.
 
 [discrete]
 ==== Preamble
