Add new inventory source docs for OpenShift Virtualization
https://issues.redhat.com/browse/AAP-26688

Affects `titles/controller-user-guide`

--- a/downstream/assemblies/platform/assembly-controller-inventories.adoc
+++ b/downstream/assemblies/platform/assembly-controller-inventories.adoc
@@ -106,6 +106,7 @@ include::platform/proc-controller-inv-source-rh-virt.adoc[leveloffset=+4]
 include::platform/proc-controller-inv-source-aap.adoc[leveloffset=+4]
 //The following Terraform module is for 2.5 only:
 include::platform/proc-controller-inv-source-terraform.adoc[leveloffset=+4]
+include::platform/proc-controller-inv-source-open-shift-virt.adoc[leveloffset=+4]
 
 include::platform/ref-controller-export-old-scripts.adoc[leveloffset=+3]
 
