--- a/downstream/modules/platform/ref-controller-inventory-plugins.adoc
+++ b/downstream/modules/platform/ref-controller-inventory-plugins.adoc
@@ -15,6 +15,7 @@ In {Controllername} v4.4, you can provide the inventory plugin configuration dir
 * xref:proc-controller-inv-source-rh-virt[Red Hat Virtualization]
 * xref:proc-controller-inv-source-aap[{PlatformName}]
 * xref:proc-controller-inv-source-terraform[Terraform State]
+* xref:proc-controller-inv-source-open-shift-virt[OpenShift Virtualization]
 
 Newly created configurations for inventory sources contain the default plugin configuration values. 
 If you want your newly created inventory sources to match the output of a legacy source, you must apply a specific set of configuration values for that source. 
