AAP-26400 updated following peer review

--- a/downstream/assemblies/builder/assembly-open-source-license.adoc
+++ b/downstream/assemblies/builder/assembly-open-source-license.adoc
@@ -2,4 +2,4 @@
 
 = Open source license
 
-include::../aap-common/gplv3-license-text.adoc[leveloffset=+1]
+include::../aap-common/apache-2.0-license.adoc[leveloffset=+1]
