AAP-23850: Incorporated peer feedback

--- a/lightspeed/modules/proc_login-vscode-extension.adoc
+++ b/lightspeed/modules/proc_login-vscode-extension.adoc
@@ -17,7 +17,7 @@ To sign in, you can use the *Connect* button or the *Accounts* button, and use t
 
 * *Ansible Lightspeed cloud service*
 +
-Users are authenticated using Red Hat Single Sign-On (RH-SSO).
+Users are authenticated using {RHSSO} ({RHSSOshort}).
 +
 To sign in, you can use the *Connect* button or the *Accounts* button and then select one of the following options:
 
