Make further changes to Controller Docs
Added Bitbucket info

Continue updating Controller docs

https://issues.redhat.com/browse/AAP-26692

--- a/downstream/modules/platform/ref-controller-credential-bitbucket.adoc
+++ b/downstream/modules/platform/ref-controller-credential-bitbucket.adoc
@@ -2,6 +2,7 @@
 
 = BitBucket data center HTTP access token
 
-You can create Bitbucket Data Center HTTP access tokens for users and teams. 
+Bitbucket Data Center is a self-hosted Git repository for collaboration and management. 
+Select this credential type to enable you to use HTTP access tokens in place of passwords for Git over HTTPS.
 
-For further information, see link:https://confluence.atlassian.com/bitbucketserver/http-access-tokens-939515499.html[HTTP access tokens].
+For further information, see link:https://confluence.atlassian.com/bitbucketserver/http-access-tokens-939515499.html[HTTP access tokens] in the Bitbucket Data Center documentation..
