--- a/downstream/modules/platform/proc-controller-add-users-job-templates.adoc
+++ b/downstream/modules/platform/proc-controller-add-users-job-templates.adoc
@@ -16,12 +16,11 @@ For more information, see TBD[Users].
 . Review your selections and click btn:[Finish] to add the roles or click btn:[Back] to make changes.
 +
 The *Add roles* window displays stating whether the action was succesful.
++
+If the action is not successful, a warning displays.
 + 
 . Click btn:[Close]. 
-//What happens if it fails?
-//There's a Finish button on this page but it doesn't seem to be necessry if you click close.
 . The *User Access* page displays the summary information.
-//Select *Job Templates* to display the job templates associated with this credential, and which jobs have run recently by using this credential.
 . Select the *Job templates* tab to choose a job template to which you want to assign this credential.
 . Chose a job template or select *Create job template* from the *Create template* list to assign the credential to additional job templates.
 +
