AAP-19920 - corrections based on peer review

--- a/downstream/modules/platform/proc-gw-create-roles.adoc
+++ b/downstream/modules/platform/proc-gw-create-roles.adoc
@@ -4,23 +4,23 @@
 
 = Creating a role
 
-ifdef::auto-exec
+ifdef::auto-exec[]
 {ControllerNameStart} provides a set of predefined roles with permissions sufficient for standard automation execution tasks. It is also possible to configure custom roles, and assign one or more permission filters to them. Permission filters define the actions allowed for a specific resource type.
-endif::auto-exec
+endif::auto-exec[]
 
-ifdef::auto-dec
+ifdef::auto-dec[]
 {EDAName} provides a set of predefined roles with permissions sufficient for standard automation decision tasks. It is also possible to configure custom roles, and assign one or more permission filters to them. Permission filters define the actions allowed for a specific resource type.
-endif::auto-dec
+endif::auto-dec[]
 
 .Procedure
 
 . From the navigation panel, select {MenuAMRoles}.
-ifdef::auto-exec
+ifdef::auto-exec[]
 . Select the *Automation Execution* tab.
-endif::auto-exec
-ifdef::auto-dec
+endif::auto-exec[]
+ifdef::auto-dec[]
 . Select the *Automation Decisions* tab.
-endif::auto-dec
+endif::auto-dec[]
 . Click btn:[Create role].
 . Provide a *Name* and optionally include a *Description* for the role.
 . Select a *Content type*.
