--- a/downstream/modules/platform/proc-gw-delete-roles.adoc
+++ b/downstream/modules/platform/proc-gw-delete-roles.adoc
@@ -4,16 +4,16 @@
 
 = Deleting a role
 
-Built in roles can not be deleted, however, you can delete both built-in and custom roles from the *Roles* list view.
+Built in roles can not be deleted, however, you can delete custom roles from the *Roles* list view.
 
 .Procedure
 
 . From the navigation panel, select {MenuAMRoles}.
-ifdef::auto-exec
+ifdef::auto-exec[]
 . Select the *Automation Execution* tab.
-endif::auto-exec
-ifdef::auto-dec
+endif::auto-exec[]
+ifdef::auto-dec[]
 . Select the *Automation Decisions* tab.
-endif::auto-dec
+endif::auto-dec[]
 . Click the *More Actions* icon *{MoreActionsIcon}* next to the role you want and select *Delete role*.
 . To delete roles in bulk, select the roles you want to delete from the *Roles* list view, click the *More Actions* icon *{MoreActionsIcon}*, and select *Delete selected roles*.
