--- a/downstream/modules/platform/proc-gw-edit-roles.adoc
+++ b/downstream/modules/platform/proc-gw-edit-roles.adoc
@@ -4,15 +4,16 @@
 
 = Editing a role
 
+Built in roles can not be changed, however, you can modify custom roles from the *Roles* list view.
 
 .Procedure
 
 . From the navigation panel, select {MenuAMRoles}.
-ifdef::auto-exec
+ifdef::auto-exec[]
 . Select the *Automation Execution* tab.
-endif::auto-exec
-ifdef::auto-dec
+endif::auto-exec[]
+ifdef::auto-dec[]
 . Select the *Automation Decisions* tab.
-endif::auto-dec
+endif::auto-dec[]
 . Click the *Edit role* icon image:leftpencil.png[Edit,15,15] next to the role you want and modify the role settings as needed.
 . Click btn:[Save role] to save your changes.
