--- a/downstream/modules/platform/proc-running-setup-script-for-updates.adoc
+++ b/downstream/modules/platform/proc-running-setup-script-for-updates.adoc
@@ -1,4 +1,4 @@
-// [id="proc-running-setup-script-for-updates_{context}"]
+[id="proc-running-setup-script-for-updates"]
 
 = Running the {PlatformName} installer setup script
 
