AAP-22069 adding backup and restore via yaml chapters (#1514)
* AAP-22069 backup and restore via yaml chapters

* updating restore name and dates for back up and restore to be consistent

--- a/downstream/assemblies/platform/assembly-aap-backup.adoc
+++ b/downstream/assemblies/platform/assembly-aap-backup.adoc
@@ -13,6 +13,8 @@ Backing up your {PlatformName} deployment involves creating backup resources for
 
 include::platform/proc-aap-controller-backup.adoc[leveloffset=+1]
 
+include::platform/proc-aap-controller-yaml-backup.adoc[leveloffset=+1]
+
 include::platform/proc-aap-hub-backup.adoc[leveloffset=+1]
 
 ifdef::parent-context[:context: {parent-context}]
