--- a/downstream/assemblies/platform/assembly-aap-recovery.adoc
+++ b/downstream/assemblies/platform/assembly-aap-recovery.adoc
@@ -11,6 +11,8 @@ If you lose information on your system or issues with an upgrade, you can use th
 
 include::platform/proc-aap-controller-restore.adoc[leveloffset=+1]
 
+include::platform/proc-aap-controller-yaml-restore.adoc[leveloffset=+1]
+
 include::platform/proc-aap-hub-restore.adoc[leveloffset=+1]
 
 ifdef::parent-context[:context: {parent-context}]
