creating PostgresVers attribute

--- a/downstream/attributes/attributes.adoc
+++ b/downstream/attributes/attributes.adoc
@@ -7,6 +7,7 @@
 :CentralAuthStart: Central authentication
 :CentralAuth: central authentication
 :PlatformVers: 2.5
+:PostgresVers: PostgreSQL 15
 //The Ansible-core version required to install AAP
 :CoreInstVers: 2.15
 //The Ansible-core version used by the AAP control plane and EEs
